--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,16 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <h2>Cycle Listing</h2>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-list>
+    <ion-item *ngFor="let cycle of cycleListing">
+      <h2>{{cycle.name}}</h2>
+      <h3>Crop: {{cycle.crop}}</h3>
+      <h3>Land: {{cycle.landQuantity}} {{cycle.landUnit}}</h3>
+      <h4>Date Planted: {{cycle.datePlanted | date: 'EEEE dd MMMM, yyyy'}}</h4>
+      <h4>Harvested: {{cycle.harvested}}</h4>
+    </ion-item>
+  </ion-list>
 </ion-content>
