--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Home</ion-title>
+        <ion-title>Purcahses</ion-title>
       </ion-navbar>
 
 </ion-header>
@@ -25,8 +25,8 @@
       <h3>{{purchase.type}}</h3>
       <h3>Units: {{purchase.units}}</h3>
       <h3>Quantity: {{purchase.quantity}}</h3>
-      <h3>Cost: {{purchase.cost | currency: 'USD':true}}</h3>
-      <h3>Date Purchase: {{purchase.datePurchased | date: 'EEEE dd MMMM, yyyy'}}</h3>
+      <h3>Cost: {{purchase.cost}}</h3>
+      <h3>Date Purchase: {{purchase.datePurchased}}</h3>
     </ion-item>
   </ion-list>
 
