--- a/src/pages/new-purchase/new-purchase.html
+++ b/src/pages/new-purchase/new-purchase.html
@@ -26,7 +26,7 @@
   <ng-template #selectMaterialTypeTemplate>
     <h5>Select Type of material</h5>
     <ion-list>
-      <button ion-item *ngFor="let materialType of materialTypeTemplate.listData" (click)="goToSelectMaterialUnits(materialType)">{{materialType}}</button>
+      <button ion-item *ngFor="let materialType of materialTypeTemplate.listData" (click)="goToSelectMaterialUnits(materialType)">{{materialType.name}}</button>
     </ion-list>
   </ng-template>
 
