--- a/src/pages/new-cycle/new-cycle.html
+++ b/src/pages/new-cycle/new-cycle.html
@@ -19,7 +19,7 @@
     <h4>Select the crop to plant for this cycle</h4>
     <ion-list>
       <button ion-item *ngFor="let seed of seeds" (click)="goToSelectLandTypeTemplate(seed)">
-        {{seed}}
+        {{seed.name}}
       </button>
       
     </ion-list>
