--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -20,7 +20,7 @@
   <ion-list>
     <ion-card *ngFor="let purchase of purchaseListing; let i = index">
       <ion-card-title padding >{{purchase.typeName}}</ion-card-title>
-      <img src="assets/img/dollar_sign_colored.ico" alt="myImage">
+      <img src="{{purchase.materialImagePath}}" alt="myImage">
       <ion-card-content>
         <p>{{purchase.quantity}} {{purchase.units}}s</p>
         <p>Cost: {{purchase.cost | currency}}</p>
