--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -35,7 +35,7 @@
 
     <ion-item>
         <ion-label color="primary" stacked>Description</ion-label>
-        <ion-textarea placeholder="Enter a description" name="description" formControlName="description"></ion-textarea>
+        <ion-textarea placeholder="Enter a description" name="description" formControlName="description" rows="5"></ion-textarea>
       </ion-item>
 
       <ion-item>
