--- a/src/pages/select-cycle/select-cycle.html
+++ b/src/pages/select-cycle/select-cycle.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>selectCycle</ion-title>
+    <ion-title>Choose your Cycles</ion-title>
   </ion-navbar>
 
 </ion-header>
