--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -49,12 +49,12 @@
       <p>{{cycle.landQuantity}} {{cycle.landUnit}}s</p>
       <p>{{cycle.datePlanted | date: 'fullDate'}}</p>
 
-      <button ion-button item-right clear icon-only (click)="openPopover($event, cycle, i)">
+      <button ion-button item-right clear icon-only (click)="openCycleOptionsPopover($event, cycle, i)">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-item>
   </ion-list>
-  <ion-fab right bottom >
+  <ion-fab right bottom>
     <button ion-fab><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
