--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -18,7 +18,7 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-card *ngFor="let purchase of purchaseListing; let i = index">
+    <!--<ion-card *ngFor="let purchase of purchaseListing; let i = index">
       <ion-card-title padding >{{purchase.typeName}}</ion-card-title>
       <img src="{{purchase.materialImagePath}}" alt="myImage">
       <ion-card-content>
@@ -40,7 +40,23 @@
           </button>
         </ion-col>
       </ion-row>
-    </ion-card>
+    </ion-card>-->
+
+    <ion-item *ngFor="let purchase of purchaseListing; let i = index">
+      <ion-thumbnail item-start>
+          <img src="{{purchase.materialImagePath}}" alt="myImage">
+      </ion-thumbnail>
+      <p>{{purchase.quantity}} {{purchase.units}}s</p>
+      <p>Cost: {{purchase.cost | currency}}</p>
+      <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
+
+      <button ion-button item-right clear icon-only>
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-item>
   </ion-list>
+  <ion-fab right bottom >
+    <button ion-fab><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 
 </ion-content>
