--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,14 +42,17 @@
     </ion-card>-->
 
     <ion-item *ngFor="let cycle of cycleListing; let i = index">
-      <ion-thumbnail item-start>
-        <img src="{{cycle.cropImagePath}}">
-      </ion-thumbnail>
-      <p>Crop: {{cycle.crop}}</p>
-      <p>{{cycle.landQuantity}} {{cycle.landUnit}}s</p>
-      <p>{{cycle.datePlanted | date: 'fullDate'}}</p>
-
-      <button ion-button item-right clear icon-only (click)="openCycleOptionsPopover($event, cycle, i)">
+      <button item-start (click)="goToCycleDataPage()">
+        <ion-thumbnail>
+          <img src="{{cycle.cropImagePath}}">
+        </ion-thumbnail>
+      </button>
+      <div (click)="goToCycleDataPage()">
+        <p>Crop: {{cycle.crop}}</p>
+        <p>{{cycle.landQuantity}} {{cycle.landUnit}}s</p>
+        <p>{{cycle.datePlanted | date: 'fullDate'}}</p>
+      </div>
+      <button ion-button item-end clear icon-only (click)="openCycleOptionsPopover($event, cycle, i)">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-item>
