--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -58,6 +58,6 @@
     </ion-item>
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="newCycle()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
