--- a/src/pages/new-task/new-task.html
+++ b/src/pages/new-task/new-task.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>newTask</ion-title>
+    <ion-title>New Task</ion-title>
   </ion-navbar>
 
 </ion-header>
