--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -42,7 +42,7 @@
       </ion-row>
     </ion-card>-->
 
-    <ion-item *ngFor="let purchase of purchaseListing; let i = index">
+    <ion-item *ngFor="let purchase of purchaseList; let i = index">
       <ion-thumbnail item-start>
         <img src="{{purchase.materialImagePath}}" alt="myImage">
       </ion-thumbnail>
