View total spent on labour for each crop cycle

--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -47,7 +47,7 @@
         <img src="{{purchase.materialImagePath}}" alt="myImage">
       </ion-thumbnail>
       <p>{{purchase.typeName}}</p>
-      <p>{{purchase.quantity}} {{purchase.units}}s</p>
+      <p>{{purchase.quantityPurchased}} {{purchase.units}}s</p>
       <p>Cost: {{purchase.cost | currency}}</p>
       <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
 
