--- a/src/pages/cycle-data/cycle-data.html
+++ b/src/pages/cycle-data/cycle-data.html
@@ -23,7 +23,7 @@
       </ion-card-content>
       <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small>
+            <button ion-button icon-left clear small (click)="goToViewCycleUsePage(material.id)">
               <ion-icon name="eye"></ion-icon>
               <div>View</div>
             </button>
@@ -123,7 +123,7 @@
     <ion-card>
         <ion-card-title padding>Labour</ion-card-title>
         <ion-card-content>
-          <p>$0.00</p>
+          <p>${{totalSpentOnLabour | number: '.2-2'}}</p>
         </ion-card-content>
         <ion-row>
             <ion-col>
