--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs [selectedIndex]="myIndex">
   <ion-tab [root]="cycleListingRoot" tabeTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="purchaseListingRoot" tabeTitle="Purchases" tabIcon="cart"></ion-tab>
+  <ion-tab [root]="saleListingRoot" tabTitle="" tabIcon="pricetags"></ion-tab>
 </ion-tabs>
