--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -10,7 +10,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>saleListing</ion-title>
+    <ion-title>Sale Listing</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,7 +18,9 @@
 
 <ion-content padding>
 
+  <p text-center>No sales made</p>
+
   <ion-fab right bottom>
-    <button ion-fab ><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="goToHarvestListingPage()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
