Updated reports page

--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -10,7 +10,7 @@
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Purcahses</ion-title>
+        <ion-title>Purchases</ion-title>
       </ion-navbar>
 
 </ion-header>
