Displayed list for sale listing

--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -14,6 +14,8 @@
 
 
 <ion-content padding>
-  <h1>Reports Page</h1>
+  <h5>Select the type of report you would like to create</h5>
+
+  <button ion-button block outline (click)="generateStandardReport()">Generate standard report</button>
 
 </ion-content>
