--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -18,7 +18,19 @@
 
 <ion-content padding>
 
-  <p text-center>No sales made</p>
+  <p text-center *ngIf="displayEmptyListMessage">No sales made</p>
+
+  <ion-list>
+    <ion-card *ngFor="let sale of saleListing">
+      <ion-card-title padding>{{sale.crop}}</ion-card-title>
+      <ion-card-content>
+        <p>Quantity sold: {{sale.quantityOfUnitsSold}}</p>
+        <p>Units sold by: {{sale.unitsSoldBy}}</p>
+        <p>Cost sold for: ${{sale.costPerunit | number: '.2-2'}}</p>
+        <p>Date Sold: {{sale.dateSold | date: 'fullDate'}}</p>
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
 
   <ion-fab right bottom>
     <button ion-fab (click)="goToHarvestListingPage()"><ion-icon name="add"></ion-icon></button>
