--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="myGreen">
         <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button>
@@ -59,7 +59,7 @@
     </ion-item>
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab (click)="goToNewPurchasePage()"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="goToNewPurchasePage()" color="main"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 
 </ion-content>
