--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="myGreen">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -33,6 +33,6 @@
   </ion-list>
 
   <ion-fab right bottom>
-    <button ion-fab (click)="goToHarvestListingPage()"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="goToHarvestListingPage()" color="main"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
