--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,23 @@
 <ion-header>
-  <ion-navbar >
+  <!-- <ion-navbar color="myGreen">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Cycles</ion-title>
-  </ion-navbar>
+  </ion-navbar> -->
+
+  <!--
+    The commented code below can be used to display a searchbar in the header as apposed to title
+  -->
+
+  <ion-toolbar color="myGreen">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-searchbar no-border></ion-searchbar>
+  </ion-toolbar>
+
+
 </ion-header>
 
 <ion-content padding>
@@ -12,37 +25,6 @@
     <p text-center *ngIf="displayNoCyclesMadeMessage">No Cycles made</p>
 
   <ion-list>
-
-    <!--<ion-card *ngFor="let cycle of cycleListing; let i = index">
-        <ion-card-title padding>{{cycle.name}}</ion-card-title>
-      <img src="{{cycle.cropImagePath}}" alt="myImage">
-      <ion-card-content>
-        <p>Crop: {{cycle.crop}}</p>
-        <p>{{cycle.landQuantity}} {{cycle.landUnit}}s</p>
-        <p>{{cycle.datePlanted | date: 'fullDate'}}</p>
-      </ion-card-content>
-      <ion-row>
-        <ion-col>
-          <button ion-button icon-left clear small (click)="deleteCycle(cycle.id, i)">
-            <ion-icon name="trash"></ion-icon>
-            <div>Delete</div>
-          </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button icon-left clear small (click)="editCycle(cycle, cycle.id)">
-            <ion-icon ios="md-create" md="md-create"></ion-icon>
-            <div>Edit</div>
-          </button>
-        </ion-col>
-        <ion-col>
-            <button ion-button icon-left clear small>
-              <ion-icon ios="md-close" md="md-close"></ion-icon>
-              <div>Close</div>
-            </button>
-          </ion-col>
-      </ion-row>
-    </ion-card>-->
-
     <ion-item *ngFor="let cycle of cycleListing; let i = index">
       <button item-start (click)="goToCycleDataPage(cycle.id)">
         <ion-thumbnail>
@@ -53,13 +35,14 @@
         <p>Crop: {{cycle.crop}}</p>
         <p>{{cycle.landQuantity}} {{cycle.landUnit}}s</p>
         <p>{{cycle.datePlanted | date: 'fullDate'}}</p>
+        <p class="closed-display" *ngIf="cycle.active === false">Closed</p>
       </div>
-      <button ion-button item-end clear icon-only (click)="openCycleOptionsPopover($event, cycle, i)">
+      <button ion-button item-end clear icon-only (click)="openCycleOptionsPopover($event, cycle, i)" color="main">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-item>
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab (click)="newCycle()" color="main"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="newCycle()" color="myGreen"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
