Added display to view all reports created

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,21 +1,21 @@
 <ion-header>
-  <!-- <ion-navbar color="myGreen">
+  <ion-navbar color="myGreen">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Cycles</ion-title>
-  </ion-navbar> -->
+  </ion-navbar>
 
   <!--
     The commented code below can be used to display a searchbar in the header as apposed to title
   -->
 
-  <ion-toolbar color="myGreen">
+  <!-- <ion-toolbar color="myGreen">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-searchbar no-border></ion-searchbar>
-  </ion-toolbar>
+  </ion-toolbar> -->
 
 
 </ion-header>
