--- a/src/pages/labourer-listing/labourer-listing.html
+++ b/src/pages/labourer-listing/labourer-listing.html
@@ -40,5 +40,5 @@
 </ion-content>
 
 <ion-fab right bottom>
-  <button ion-fab (click)="goToNewLabourerPage()"><ion-icon name="add"></ion-icon></button>
+  <button ion-fab (click)="goToNewLabourerPage()" color="myGreen"><ion-icon name="add"></ion-icon></button>
 </ion-fab>
