--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -33,6 +33,6 @@
   </ion-list>
 
   <ion-fab right bottom>
-    <button ion-fab (click)="goToHarvestListingPage()" color="main"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab (click)="goToHarvestListingPage()" color="myGreen"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
