--- a/src/pages/report-listing/report-listing.html
+++ b/src/pages/report-listing/report-listing.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>reportListing</ion-title>
+    <ion-title>Report Listing</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,14 +15,20 @@
 
 <ion-content padding>
 
-  <h4 *ngIf="displayMessage">File successfully created</h4>
+  <!-- <h4 *ngIf="displayMessage">File successfully created</h4> -->
 
   <ion-list>
-    <ion-card *ngFor="let report of reportList">
-      <ion-card-content>
-        <p>{{report.name}}</p>
-      </ion-card-content>
-    </ion-card>
+    <ion-item *ngFor="let file of fileList">
+      <ion-thumbnail item-start>
+        <img src="assets/img/Excel-icon.png" alt="myImage">
+      </ion-thumbnail>
+      <div>
+        <h3>{{file.name}}</h3>
+      </div>
+      <button ion-button item-right clear icon-only color="main">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-item>
   </ion-list>
 
 </ion-content>
