--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="myGreen">
     <ion-title>Reports</ion-title>
   </ion-navbar>
 
@@ -16,6 +16,6 @@
 <ion-content padding>
   <h5>Select the type of report you would like to create</h5>
 
-  <button ion-button block outline (click)="generateStandardReport()">Generate standard report</button>
+  <button ion-button block outline (click)="generateStandardReport()" color="myGreen">Generate standard report</button>
 
 </ion-content>
