--- a/src/pages/edit-cycle/edit-cycle.html
+++ b/src/pages/edit-cycle/edit-cycle.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="myGreen">
     <ion-title>Edit Cycle</ion-title>
   </ion-navbar>
 
@@ -44,7 +44,7 @@
       <ion-label color="primary" stacked>Date Planted</ion-label>
       <ion-datetime displayFormat="DDDD, DD MMMM, YYYY" name="datePlanted" formControlName="datePlanted"></ion-datetime>
     </ion-item>
-    <button ion-button block [disabled]="!editedCycle.valid" (click)="editCycle()">Done</button>
+    <button ion-button block [disabled]="!editedCycle.valid" (click)="editCycle()" color="myGreen">Done</button>
   </form>
 
 </ion-content>
